--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "build:dev": "vite build --mode development",
+    "dev": "npx vite",
+    "build": "npx vite build",
+    "build:dev": "npx vite build --mode development",
     "lint": "eslint .",
-  "preview": "vite preview",
+  "preview": "npx vite preview",
   "stripe:create-link": "node ./scripts/create_stripe_payment_link.mjs"
   },
   "dependencies": {
